消费者模块调用 支付模块 通过RestTemplate 来调用

--- a/pom.xml
+++ b/pom.xml
@@ -11,6 +11,7 @@
     <!-- 模块管理-->
     <modules>
         <module>miujoke-provider-payment8001</module>
+        <module>miujoke-consumer-order80</module>
     </modules>
     <packaging>pom</packaging>
 
