实体公用类的 提取，将消费者模块与支付模块中的entities中的类方在一个公告模块api-commons中

--- a/pom.xml
+++ b/pom.xml
@@ -12,6 +12,7 @@
     <modules>
         <module>miujoke-provider-payment8001</module>
         <module>miujoke-consumer-order80</module>
+        <module>miujoke-api-commons</module>
     </modules>
     <packaging>pom</packaging>
 
