--- a/miujoke-provider-payment8001/pom.xml
+++ b/miujoke-provider-payment8001/pom.xml
@@ -13,6 +13,13 @@
 
     <dependencies>
 
+        <!-- !引入自己定义的  miujoke-api-commons 通用包，可以使用Payment支付Entity-->
+        <dependency>
+            <groupId>com.miujoke</groupId>
+            <artifactId>miujoke-api-commons</artifactId>
+            <version>${project.version}</version>
+        </dependency>
+
         <!-- https://mvnrepository.com/artifact/org.springframework.boot/spring-boot-devtools -->
         <dependency>
             <groupId>org.springframework.boot</groupId>
