--- a/pom.xml
+++ b/pom.xml
@@ -13,6 +13,7 @@
         <module>miujoke-provider-payment8001</module>
         <module>miujoke-consumer-order80</module>
         <module>miujoke-api-commons</module>
+        <module>miujoke-eureka-server7001</module>
     </modules>
     <packaging>pom</packaging>
 
