--- a/miujoke-provider-payment8001/pom.xml
+++ b/miujoke-provider-payment8001/pom.xml
@@ -13,6 +13,11 @@
 
     <dependencies>
 
+        <!--eureka-client-->
+        <dependency>
+            <groupId>org.springframework.cloud</groupId>
+            <artifactId>spring-cloud-starter-netflix-eureka-client</artifactId>
+        </dependency>
         <!-- !引入自己定义的  miujoke-api-commons 通用包，可以使用Payment支付Entity-->
         <dependency>
             <groupId>com.miujoke</groupId>
