--- a/miujoke-consumer-order80/pom.xml
+++ b/miujoke-consumer-order80/pom.xml
@@ -12,6 +12,12 @@
     <artifactId>miujoke-consumer-order80</artifactId>
 
     <dependencies>
+
+        <!--eureka-client-->
+        <dependency>
+            <groupId>org.springframework.cloud</groupId>
+            <artifactId>spring-cloud-starter-netflix-eureka-client</artifactId>
+        </dependency>
         <!-- !引入自己定义的  miujoke-api-commons 通用包，可以使用Payment支付Entity-->
         <dependency>
             <groupId>com.miujoke</groupId>
