添加eureka7002 模块 集群 eureka7001与eureka7002  相互注册，相互守望（eureka7001中注册eureka7002；eureka7002中注册eureka7001）.这样就能实现集群

--- a/miujoke-provider-payment8001/src/main/resources/application.yml
+++ b/miujoke-provider-payment8001/src/main/resources/application.yml
@@ -4,7 +4,7 @@ server:
 
 spring:
   application:
-    name: cloud-payment-service  # 注册中心的名字
+    name: miujoke-payment-service  # 注册中心的名字
   datasource:
     type: com.alibaba.druid.pool.DruidDataSource  # 当前数据源操作类型
     driver-class-name: com.mysql.cj.jdbc.Driver  # mysql驱动包
