--- a/pom.xml
+++ b/pom.xml
@@ -14,6 +14,7 @@
         <module>miujoke-consumer-order80</module>
         <module>miujoke-api-commons</module>
         <module>miujoke-eureka-server7001</module>
+        <module>miujoke-eureka-server7002</module>
     </modules>
     <packaging>pom</packaging>
 
