--- a/miujoke-eureka-server7001/src/main/resources/application.yml
+++ b/miujoke-eureka-server7001/src/main/resources/application.yml
@@ -3,7 +3,7 @@ server:
 
 eureka:
   instance:
-    hostname: eureka7001.com   #eureka服务端的实例名字
+    hostname: eureka7001.com   #eureka服务端的实例名字 此处变成（eureka7001.com）是通过改变hosts文件进行ip映射
   client:
     register-with-eureka: false    #表识不向注册中心注册自己
     fetch-registry: false   #表示自己就是注册中心，职责是维护服务实例，并不需要去检索服务
