因为集群支付业务模块不知道是8001还是8002，所以在controller中获取模块的端口号即可辨别是调用那一台服务器

--- a/pom.xml
+++ b/pom.xml
@@ -15,6 +15,7 @@
         <module>miujoke-api-commons</module>
         <module>miujoke-eureka-server7001</module>
         <module>miujoke-eureka-server7002</module>
+        <module>miujoke-provider-payment8002</module>
     </modules>
     <packaging>pom</packaging>
 
