--- a/miujoke-provider-payment8002/src/main/resources/application.yml
+++ b/miujoke-provider-payment8002/src/main/resources/application.yml
@@ -20,8 +20,9 @@ eureka:
       #defaultZone: http://localhost:7001/eureka/    #设置与eureka server交互的地址查询服务和注册服务都需要依赖这个地址  ：：单机版
       defaultZone: http://eureka7001.com:7001/eureka,http://eureka7002.com:7002/eureka  #集群版
     # Eureka 微服务地址名称修改 防止别人看到主机的ip
-    instance:
-      instance-id: payment8002
+  instance:
+    instance-id: payment8002
+    prefer-ip-address: true # 访问路径可以显示ip地址
 
 mybatis:
   mapperLocations: classpath:mapper/*.xml
