--- a/miujoke-provider-payment8001/src/main/resources/application.yml
+++ b/miujoke-provider-payment8001/src/main/resources/application.yml
@@ -23,6 +23,10 @@ eureka:
   instance:
     instance-id: payment8001
     prefer-ip-address: true # 访问路径可以显示ip地址
+    #Eureka客服端向服务端发送心跳的时间间隔 默认30秒
+#    lease-renewal-interval-in-seconds: 1
+    #Eureka服务端在收到最后一次心跳后等待时间上限，单位为秒(默认是90秒)，超时将剔除服务
+#    lease-expiration-duration-in-seconds: 2
 
 
 mybatis:
