--- a/miujoke-consumer-order80/src/main/resources/application.yml
+++ b/miujoke-consumer-order80/src/main/resources/application.yml
@@ -10,4 +10,8 @@ eureka:
     fetch-registry: true   #是否从EurekaServer抓取已有的注册信息，默认为true。单节点无所谓，集群必须设置为true才能配合ribbon使用负载均衡
     service-url:
       #defaultZone: http://localhost:7001/eureka/    #设置与eureka server交互的地址查询服务和注册服务都需要依赖这个地址  ：：单机版
-      defaultZone: http://eureka7001.com:7001/eureka,http://eureka7002.com:7002/eureka  #集群版
+      defaultZone: http://eureka7002.com:7001/eureka,http://eureka7002:7002/eureka  #集群版
+
+  instance:
+    instance-id: order80
+    prefer-ip-address: true
