--- a/miujoke-consumerzk-order80/pom.xml
+++ b/miujoke-consumerzk-order80/pom.xml
@@ -52,6 +52,12 @@
             <version>3.4.14</version>
         </dependency>
 
+        <dependency>
+            <groupId>com.101tec</groupId>
+            <artifactId>zkclient</artifactId>
+            <version>0.10</version>
+        </dependency>
+
     <!-- https://mvnrepository.com/artifact/org.springframework.boot/spring-boot-devtools -->
     <dependency>
         <groupId>org.springframework.boot</groupId>
