--- a/miujoke-mq-provider/pom.xml
+++ b/miujoke-mq-provider/pom.xml
@@ -27,6 +27,16 @@
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-web</artifactId>
         </dependency>
+
+        <dependency>
+            <groupId>log4j</groupId>
+            <artifactId>log4j</artifactId>
+        </dependency>
+
+        <dependency>
+            <groupId>com.miujoke</groupId>
+            <artifactId>miujoke-common</artifactId>
+        </dependency>
     </dependencies>
 
     <build>
