--- a/pom.xml
+++ b/pom.xml
@@ -7,6 +7,7 @@
     <groupId>com.miujoke</groupId>
     <artifactId>miujoke-springcloud</artifactId>
     <version>1.0-SNAPSHOT</version>
+    <packaging>pom</packaging>
 
     <!-- 模块管理-->
     <modules>
@@ -19,11 +20,21 @@
         <module>miujoke-provider-payment8004</module>
         <module>miujoke-consumerzk-order80</module>
         <module>miujoke-mq-provider</module>
+        <module>miujoke-mq-consumer</module>
+        <module>miujoke-common</module>
+        <module>miujoke-api-gateway</module>
+        <module>miujoke-provider-consul-payment8005</module>
+        <module>miujoke-providerconsul-payment8005</module>
+        <module>miujoke-providerconsul-payment8005</module>
+        <module>miujoke-providerconsul-payment8006</module>
+        <module>miujoke-providerconsul-payment8005</module>
+        <module>miujoke-consumerconsul-order</module>
     </modules>
-    <packaging>pom</packaging>
+
 
     <!-- 统一管理jar包版本 -->
     <properties>
+        <common>0.0.1-SNAPSHOT</common>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <maven.compiler.source>1.8</maven.compiler.source>
         <maven.compiler.target>1.8</maven.compiler.target>
@@ -33,11 +44,37 @@
         <mysql.version>8.0.18</mysql.version>
         <druid.version>1.1.21</druid.version>
         <mybatis.spring.boot.version>1.3.0</mybatis.spring.boot.version>
+        <jackson.version>2.12.4</jackson.version>
     </properties>
 
     <!-- 子模块继承之后，提供作用：锁定版本+子modlue不用写groupId和version  -->
     <dependencyManagement>
         <dependencies>
+            <dependency>
+                <groupId>com.fasterxml.jackson.core</groupId>
+                <artifactId>jackson-core</artifactId>
+                <version>${jackson.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>com.fasterxml.jackson.core</groupId>
+                <artifactId>jackson-databind</artifactId>
+                <version>${jackson.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>com.fasterxml.jackson.core</groupId>
+                <artifactId>jackson-annotations</artifactId>
+                <version>${jackson.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>com.miujoke</groupId>
+                <artifactId>miujoke-common</artifactId>
+                <version>${common}</version>
+            </dependency>
+            <dependency>
+                <groupId>org.springframework.boot</groupId>
+                <artifactId>spring-boot-starter-web</artifactId>
+                <version>2.2.2.RELEASE</version>
+            </dependency>
             <!--spring boot 2.2.2-->
             <dependency>
                 <groupId>org.springframework.boot</groupId>
