--- a/miujoke-hystrix-dashboard9001/pom.xml
+++ b/miujoke-hystrix-dashboard9001/pom.xml
@@ -6,14 +6,13 @@
         <artifactId>miujoke-springcloud</artifactId>
         <version>1.0-SNAPSHOT</version>
     </parent>
-    <artifactId>miujoke-provider-hystrix-payment8001</artifactId>
+    <artifactId>miujoke-hystrix-dashboard9001</artifactId>
 
     <dependencies>
         <dependency>
-            <groupId>com.netflix.hystrix</groupId>
-            <artifactId>hystrix-metrics-event-stream</artifactId>
+            <groupId>org.springframework.cloud</groupId>
+            <artifactId>spring-cloud-starter-netflix-hystrix-dashboard</artifactId>
         </dependency>
-
         <dependency>
             <groupId>com.netflix.hystrix</groupId>
             <artifactId>hystrix-javanica</artifactId>
