--- a/miujoke-api-commons/pom.xml
+++ b/miujoke-api-commons/pom.xml
@@ -12,6 +12,13 @@
     <artifactId>miujoke-api-commons</artifactId>
 
     <dependencies>
+        <dependency>
+            <groupId>com.alibaba</groupId>
+            <artifactId>fastjson</artifactId>
+            <version>2.0.1</version>
+        </dependency>
+
+
         <!-- https://mvnrepository.com/artifact/org.springframework.boot/spring-boot-devtools -->
         <dependency>
             <groupId>org.springframework.boot</groupId>
