--- a/pom.xml
+++ b/pom.xml
@@ -30,6 +30,7 @@
         <module>miujoke-hystrix-dashboard9001</module>
         <module>miujoke-gateway-gateway9527</module>
         <module>miujoke-config-center3344</module>
+        <module>miujoke-config-client3355</module>
     </modules>
 
 
