--- a/miujoke-config-center3344/pom.xml
+++ b/miujoke-config-center3344/pom.xml
@@ -9,6 +9,11 @@
     <artifactId>miujoke-config-center3344</artifactId>
 
     <dependencies>
+        <!--消息总线rabbitmq支持-->
+        <dependency>
+            <groupId>org.springframework.cloud</groupId>
+            <artifactId>spring-cloud-starter-bus-amqp</artifactId>
+        </dependency>
         <!--springcloud config-->
         <dependency>
             <groupId>org.springframework.cloud</groupId>
