--- a/miujoke-stream-consumer8803/src/main/resources/application.yml
+++ b/miujoke-stream-consumer8803/src/main/resources/application.yml
@@ -1,5 +1,5 @@
 server:
-  port: 8802
+  port: 8803
 
 spring:
   application:
@@ -21,7 +21,8 @@ spring:
           destination: customExchange #自己定义要使用的exchange名称
           content-type: application/json #设置消息类型，此处为json，文本设置 text/plain
           binder: {defaultRabbit} # 设置要绑定的消息服务的具体设置
-          group: consumerA #分组名称
+          #group: consumerA #分组名称消费者A
+          group: consumerB #分组名称消费者B
 
 
 #服务注册到eureka
@@ -32,5 +33,5 @@ eureka:
   instance:
     lease-renewal-interval-in-seconds: 2 #设置心跳的时间间隔（默认30s）
     lease-expiration-duration-in-seconds: 5 #如果现在超过了5秒的间隔（默认90秒）
-    instance-id: receive-8802.com #在信息列表时显示主机名称
+    instance-id: receive-8803.com #在信息列表时显示主机名称
     prefer-ip-address: true # 访问路径变为IP地址
