--- a/miujoke-consumer-order80/src/main/resources/application.yml
+++ b/miujoke-consumer-order80/src/main/resources/application.yml
@@ -4,6 +4,12 @@ spring:
   application:
     name: miujoke-order-service
 
+  zipkin:
+    base-url: http://localhost:9411
+  sleuth:
+    sampler:
+      probability: 1 #采样率值介于0到1之间，1表示全部采集
+
 eureka:
   client:
     register-with-eureka: true    #表识向注册中心注册自己
