--- a/miujoke-provider-payment8001/pom.xml
+++ b/miujoke-provider-payment8001/pom.xml
@@ -13,6 +13,12 @@
 
     <dependencies>
 
+        <!--包含了sleuth+zipkin-->
+        <dependency>
+            <groupId>org.springframework.cloud</groupId>
+            <artifactId>spring-cloud-starter-zipkin</artifactId>
+        </dependency>
+
         <dependency>
             <groupId>com.netflix.hystrix</groupId>
             <artifactId>hystrix-metrics-event-stream</artifactId>
