--- a/miujoke-provider-payment8001/src/main/resources/application.yml
+++ b/miujoke-provider-payment8001/src/main/resources/application.yml
@@ -12,6 +12,12 @@ spring:
     username: root
     password: admin
 
+  zipkin:
+    base-url: http://localhost:9411
+  sleuth:
+    sampler:
+      probability: 1 #采样率值介于0到1之间，1表示全部采集
+
 eureka:
   client:
     register-with-eureka: true    #表识向注册中心注册自己
