springcloudalibaba集成nacos并将服务注册到nacos服务注册中心，并用ribbon进行负载均衡调用

--- a/pom.xml
+++ b/pom.xml
@@ -35,6 +35,9 @@
         <module>miujoke-stream-provider8801</module>
         <module>miujoke-stream-consumer8802</module>
         <module>miujoke-stream-consumer8803</module>
+        <module>miujoke-nacos-payment-provide9001</module>
+        <module>miujoke-nacos-payment-provider9002</module>
+        <module>miujoke-nacos-consumer83</module>
     </modules>
 
 
