--- a/miujoke-nacos-consumer83/src/main/resources/application.yml
+++ b/miujoke-nacos-consumer83/src/main/resources/application.yml
@@ -7,7 +7,8 @@ spring:
   cloud:
     nacos:
       discovery:
-        server-addr: localhost:8848
+        server-addr: 192.168.1.6:8848
+        ip: 192.168.1.6
 
 service-url:
   nacos-user-service: http://nacos-payment-provider
