--- a/miujoke-nacos-payment-provide9001/src/main/resources/application.yml
+++ b/miujoke-nacos-payment-provide9001/src/main/resources/application.yml
@@ -7,7 +7,7 @@ spring:
   cloud:
     nacos:
       discovery:
-        server-addr: localhost:8848
+        server-addr: 192.168.1.6:8848
 
 management:
   endpoints:
