--- a/miujoke-nacos-config-client3377/pom.xml
+++ b/miujoke-nacos-config-client3377/pom.xml
@@ -6,10 +6,16 @@
         <artifactId>miujoke-springcloud</artifactId>
         <version>1.0-SNAPSHOT</version>
     </parent>
-    <artifactId>miujoke-nacos-payment-provider9002</artifactId>
+    <artifactId>miujoke-nacos-config-client3377</artifactId>
     <dependencies>
 
-        <!--nacos-->
+        <!--nacos-discover-->
+        <dependency>
+            <groupId>com.alibaba.cloud</groupId>
+            <artifactId>spring-cloud-starter-alibaba-nacos-config</artifactId>
+        </dependency>
+
+        <!--nacos-discover-->
         <dependency>
             <groupId>com.alibaba.cloud</groupId>
             <artifactId>spring-cloud-starter-alibaba-nacos-discovery</artifactId>
