--- a/miujoke-nacos-consumer83/src/main/resources/application.yml
+++ b/miujoke-nacos-consumer83/src/main/resources/application.yml
@@ -7,7 +7,7 @@ spring:
   cloud:
     nacos:
       discovery:
-        server-addr: 192.168.1.6:8848
+        server-addr: 192.168.1.6:8088 #转到nginx集群
         ip: 192.168.1.6
 
 service-url:
