--- a/miujoke-sentinel-service8401/pom.xml
+++ b/miujoke-sentinel-service8401/pom.xml
@@ -6,14 +6,31 @@
         <artifactId>miujoke-springcloud</artifactId>
         <version>1.0-SNAPSHOT</version>
     </parent>
-    <artifactId>miujoke-nacos-payment-provide9001</artifactId>
+    <artifactId>miujoke-sentinel-service8401</artifactId>
 
     <dependencies>
 
-        <!--nacos-->
+        <!--sentinel 持久化-->
+        <dependency>
+            <groupId>com.alibaba.csp</groupId>
+            <artifactId>sentinel-datasource-nacos</artifactId>
+        </dependency>
+
+        <!--sentinel-->
+        <dependency>
+            <groupId>com.alibaba.cloud</groupId>
+            <artifactId>spring-cloud-starter-alibaba-sentinel</artifactId>
+        </dependency>
+        <!--nacos-discover-->
         <dependency>
             <groupId>com.alibaba.cloud</groupId>
             <artifactId>spring-cloud-starter-alibaba-nacos-discovery</artifactId>
+        </dependency>
+
+        <!--openfeign-->
+        <dependency>
+            <groupId>org.springframework.cloud</groupId>
+            <artifactId>spring-cloud-starter-openfeign</artifactId>
         </dependency>
 
 
@@ -42,12 +59,6 @@
             <artifactId>spring-boot-starter-test</artifactId>
             <scope>test</scope>
         </dependency>
-
-        <dependency>
-            <groupId>com.miujoke</groupId>
-            <artifactId>miujoke-common</artifactId>
-        </dependency>
-
 
     </dependencies>
 </project>
